--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
         <div id="slides">
         <div class="slide slide1">
             <div class="slide-content">
-                <span>First Image</span>
+                <span>Image 1</span>
             </div>
         </div>
         <div class="slide slide2">
             <div class="slide-content">
-                <span>Second Image</span>
+                <span>Image 2</span>
             </div>
         </div>
         <div class="slide slide3">
             <div class="slide-content">
-                <span>Third Image</span>
+                <span>Image 3</span>
             </div>
         </div>
         <div class="slide slide4">
             <div class="slide-content">
-                <span>Fourth Image</span>
+                <span>Image 4</span>
             </div>
         </div>
         <div class="slide slide5">
             <div class="slide-content">
-                <span>Fifth Image</span>
+                <span>Image 5</span>
             </div>
         </div>
         <div class="slide slide6">
             <div class="slide-content">
-                <span>Sixth Image</span>
+                <span>Image 6</span>
             </div>
         </div>
         </div>
